grammar.js
    source_file: $ => seq(
      repeat($._newline),
      repeat($._top_level_item),
    ),

    // Map ANTLR top level items to working backup names
    _top_level_item: $ => choice(
      $.import_decl,     // import statement
      $.arch_block,      // maps to ANTLR 'arch'
      $.services_block,  // maps to ANTLR 'services_def'
      $.service_block,   // maps to ANTLR 'service_def'
      $.domain_block,    // maps to ANTLR 'domain_def'
      $.domains_block,   // maps to ANTLR 'domains_def'
      $.actors_block,    // maps to ANTLR 'actors_def'
      $.actor_block,     // maps to ANTLR 'actor_def'
      $.exposure_block,  // maps to ANTLR 'exposure'
      $.use_case_block,  // maps to ANTLR 'use_case'
      $.context_map_block, // context_map { edge_stmt* }
      $.glossary_block,   // glossary { glossary_stmt* }
    ),

    // context_map block: relationships between bounded contexts / services /
    // ubiquitous-language terms, expressed as `<ref> <edge_verb> <ref>` lines.
    // Follows the same NEWLINE framing the other brace blocks use. The block
    // may optionally carry a domain-scope identifier right after the
    // `context_map` keyword (e.g. `context_map re { ... }`), which lets
    // endpoints inside the block be written bare (relative to that domain)
    // instead of qualified with `domain/name`.
    ref: $ => choice(
      $.slug,
      seq($.ref_kind, ':', $.slug),
    ),

    // bc/term arrive via identifier; service/domain are keyword tokens (no
    // `word:` directive) so they must be listed explicitly.
    services_block: $ => seq(
      'services',
      '{',
      repeat($._newline),
      repeat(seq($.service_definition, optional($._newline))), // service_definition = service_block in ANTLR
      '}',
      repeat($._newline),
    ),

    // ANTLR: service_def: 'service' service_name '{' NEWLINE* service_properties '}' NEWLINE*;
    service_definition: $ => seq(
      choice($.string, $.identifier), // service_name can be IDENTIFIER | STRING
      '{',
      repeat($._newline),
      repeat(seq($.service_property, optional($._newline))),
      '}',
    ),

    // ANTLR: service_property with correct property names
    service_property: $ => choice(
      $.service_contexts_property,
      $.language_property,
      $.data_stores_property,
      $.deployment_property,
      $.catalog_ref_property,
      $.repo_property,
    ),

    service_contexts_property: $ => seq(
      'contexts',
      ':',
      $.identifier_list,
    ),

    language_property: $ => seq(
      'language',
      ':',
      $.identifier,
    ),

    data_stores_property: $ => seq(
      'data-stores',
      ':',
      $.identifier_list,
    ),

    use_case_block: $ => seq(
      'use_case',
      $.string,
      '{',
      repeat1($._newline),
      optional(seq($.tags_block, repeat1($._newline))),
      $.scenario,
      '}',
      repeat($._newline),
    ),

    // Q11 (Task 6 / Slice D): `tags { }` sub-block on use_case, mirroring the
    // Go parser's `IDENT ':' (IDENT | STRING | ref-shaped-slug)` tag lines
    // (see craft repo internal/syntax/parser.go parseTagStmt). `tags` is kept
    // a bare string literal in the seq — a contextual keyword, same as
    // `when`/`use_case` elsewhere in this grammar — not a reserved word.
    slug: $ => seq(
      $.identifier,
      repeat(seq('/', $.identifier)),
    ),

    scenario: $ => seq(
      $.when_clause,
      optional($.scenario_continuation),
    ),

    when_clause: $ => seq(
      'when',
      choice(
        seq($.external_trigger, $._newline),
        seq($.event_trigger, $._newline),
        seq($.domain_listener, $._newline),
        seq($.cron_trigger, $._newline),
      ),
      repeat(seq($.action, $._newline)),
    ),

    // Hybrid approach: use specific node types for external triggers
    external_trigger: $ => prec.left(2, choice(
      seq(
        $.trigger_actor, // Actor
        $.trigger_verb, // Verb
        $.connector_word,
        $.phrase, // Phrase
      ),
      seq(
        $.trigger_actor, // Actor
        $.trigger_verb, // Verb
        $.phrase, // Phrase
      ),
      seq(
        $.trigger_actor, // Actor
        $.trigger_verb, // Verb
      )
    )),

    // Specific node types for triggers (hybrid approach)
    trigger_actor: $ => $.identifier,   // Actor name in triggers
    trigger_verb: $ => $.identifier,    // Verb in triggers

    // Subject of a `listens` trigger. Same slot rule as action_subject: it
    // names a bounded context, so `re/billing listens ...` is legal.
    action: $ => choice(
      $.sync_action,
      $.async_action,
      $.internal_action,
      $.return_action,
    ),

    // Hybrid approach: use specific node types for action contexts
    sync_action: $ => prec.left(2, choice(
      seq(
        $.action_subject, // Source domain  
        'asks',
        $.action_target, // Target domain
        $.connector_word,
        $.phrase,
      ),
      seq(
        $.action_subject, // Source domain
        'asks', 
        $.action_target, // Target domain
        $.phrase,
      ),
    )),

    // `notifies` has no phrase between the event and a possible annotation
    // (mirrors parseNotifiesAction in craft's internal/syntax/parser.go), so
    // the annotation is attached here explicitly. The other three action kinds
    // pick it up through `phrase`, which is the only place a `[` can appear on
    // those lines.
    async_action: $ => seq(
      $.action_subject, // Domain
      'notifies',
      choice($.string, $.ref), // Event: quoted string or bare/typed ref
      optional($.operation_annotation),
    ),

    // Hybrid approach: use specific node types for internal actions
    internal_action: $ => prec.left(1, seq(
      $.action_subject, // Domain/Service
      $.action_verb, // Verb
      optional($.connector_word),
      $.phrase,
    )),

    // Return action: domain returns [to domain] [connector_word] phrase
    return_action: $ => prec.left(2, choice(
      seq(
        $.action_subject, // Source domain
        'returns',
        'to',
        $.action_target, // Target domain
        optional($.connector_word),
        $.phrase,
      ),
      seq(
        $.action_subject, // Source domain
        'returns',
        optional($.connector_word),
        $.phrase,
      ),
    )),

    // Specific node types for actions (hybrid approach)
    // The subject names a bounded context, so it accepts the qualified
    // `<domain>/<name>` form as well as a bare name (craft's parseNameSlot in
    // internal/syntax/parser.go, called from parseAction). A `kind:` prefix is
    // a semantic diagnostic in craft, not a syntax error, so `ref` is the right
    // shape here rather than `slug`.
    action_subject: $ => $.ref,         // Service or domain name in actions
    action_target: $ => $.ref,          // Target: bare name (Database) or typed ref (bc:re/billing)
    action_verb: $ => $.identifier,     // Verb in actions

    connector_word: $ => choice(
      'a', 'an', 'the', 'as', 'to', 'from', 'in', 'on', 'at', 'for', 'with', 'by', 'of'
    ),

    // Use backup's working phrase with precedence. Accepts free-form same-line
    // prose: identifiers, strings, connector words, numbers, and any other
    // non-whitespace/brace/quote chunk (punctuation like `(1! & 2!)`) via the
    // low-precedence prose atom. Still bounded at newline (newline is not
    // matched by _prose_atom).
    phrase: $ => prec.left(1, repeat1(choice(
      $.identifier,
      $.string,
      $.connector_word,
      $.number,
      $.operation_annotation,
      $._prose_atom,
    ))),

    // Any run of non-whitespace that is not a brace or quote. prec(-1) so it
    // never shadows identifiers/keywords/numbers of equal length elsewhere,
    // and so the `[` that opens an operation_annotation (an anonymous literal
    // at the default precedence 0) wins over a longer prose match like
    // `[POST`. Explicit lexical precedence is compared before match length.
    _prose_atom: $ => token(prec(-1, /[^\s{}"]+/)),

    // Operation annotation (craft >= 2.16.0): a trailing `[...]` on an action
    // line, e.g. `[POST /v1/accounts/{id}/charges]`.
    //
    // craft's own rule (opAnnotationStart in internal/syntax/parser.go) is
    // "the annotation opener is the last `[` on the line, and the line's last
    // token must be `]`". A `[` that fails either half is prose. That needs
    // end-of-line lookahead at the moment the lexer sees the `[`, which no
    // context-free rule can express, so the opening bracket comes from the
    // external scanner in src/scanner.c. It is aliased back to `[` so the
    // bracket is still an anonymous node the highlight queries can target.
    operation_annotation: $ => seq(
      alias($._annotation_start, '['),
      optional(field('verb', $.operation_verb)),
      repeat(field('payload', $.operation_payload)),
      ']',
    ),

    // The recognised protocol verbs, mirroring protocolVerbs in craft's
    // internal/syntax/op_verbs.go. Matching is exact and case-sensitive, and
    // only classifies the head word: these are string literals, so against an
    // equal-length operation_payload match the literal wins (match
    // specificity), while a longer payload like `POSTMAN` wins on length and
    // stays opaque. That reproduces isProtocolVerb's head-only check.
    operation_verb: $ => choice(
      'GET',
      'POST',
      'PUT',
      'PATCH',
      'DELETE',
      'HEAD',
      'OPTIONS',
      'GRPC',
      'TOPIC',
      'QUERY',
    ),

    // Opaque annotation payload. Excludes only whitespace and the brackets, so
    // `{id}`, dots, slashes and hyphens all ride along, matching the payload
    // charset craft sweeps in parseOpAnnotation.
    operation_payload: $ => token(/[^\s\[\]]+/),

    // Common elements - from backup
    // Allows continuation lines: items may be separated by comma + optional newlines.
    // Trailing commas are NOT supported in tree-sitter (syntax highlighting only);
    // the authoritative ANTLR parser handles them.
    identifier_list: $ => seq(
      $.identifier,
      repeat(seq(',', repeat($._newline), $.identifier)),
    ),

    // Q9: identifiers now allow dots (e.g. my.service)
    identifier: $ => /[a-zA-Z0-9_][a-zA-Z0-9_.-]*/,

    string: $ => seq(
      '"',
      repeat(choice(
        /[^"\\]/,
        /\\./,
      )),
      '"',
    ),

    _newline: $ => /\r?\n/,
  }
});

// Helper function for comma-separated lists
function sep1(rule, separator) {
  return seq(rule, repeat(seq(separator, rule)), optional(separator));
}
