test/corpus/services.txt
===
Simple services block
===

services {
    UserService {
        contexts: Authentication, Profile
        language: golang
        data-stores: user_db, cache
    }
}

---

(source_file
  (services_block
    (service_definition
      (identifier)
      (service_property
        (service_contexts_property
          (identifier_list (identifier) (identifier))))
      (service_property
        (language_property (identifier)))
      (service_property
        (data_stores_property
          (identifier_list (identifier) (identifier)))))))

===
Multiple services
===

services {
    UserService {
        contexts: Authentication, Profile
        language: golang
    }
    PaymentService {
        contexts: Payment
        language: java
    }
}

---

(source_file
  (services_block
    (service_definition
      (identifier)
      (service_property
        (service_contexts_property
          (identifier_list (identifier) (identifier))))
      (service_property
        (language_property (identifier))))
    (service_definition
      (identifier)
      (service_property
        (service_contexts_property
          (identifier_list (identifier))))
      (service_property
        (language_property (identifier))))))